# murph

./: .env.example  .gitignore  ARCHITECTURE.md  CURRENT_TASK.md  PROGRESS.md  README.md  pyproject.toml
client/: pyproject.toml
client/src/murph_client/: __init__.py  __main__.py  config.py  main.py
client/src/murph_client/audio/: __init__.py  capture.py  playback.py  wakeword.py
client/src/murph_client/models/: hey_murph.onnx
client/src/murph_client/motors/: driver.py
client/src/murph_client/sensors/: __init__.py  ultrasonic.py
docs/: API_REFERENCE.md  CONFIGURATION.md  CONTEXT_RECOVERY.md  DEPLOYMENT.md  HARDWARE_SETUP.md
docs/plans/: 2025-01-15-murph-design.md  2025-01-15-murph-implementation.md
emulator/: __init__.py  __main__.py  app.py  config.py  physics.py  virtual_pi.py
emulator/audio/: __init__.py  microphone.py  track.py
emulator/static/: emulator.js  index.html  styles.css
emulator/video/: __init__.py  streamer.py  webcam.py
pi/: main.py
pi/actuators/: __init__.py  base.py  display.py  motors.py  pygame_display.py  speaker.py
pi/audio/: __init__.py  microphone.py  track.py
pi/communication/: __init__.py  client.py  command_handler.py
pi/local_behaviors/: __init__.py  reflexes.py
pi/sensors/: __init__.py  base.py  imu.py  touch.py
pi/video/: __init__.py  camera.py  streamer.py
scripts/: calibrate_motors.py  register_face.py  test_audio.py
server/: main.py  monitoring.py  orchestrator.py  pyproject.toml
server/audio/: __init__.py  receiver.py
server/cognition/behavior/: __init__.py  actions.py  behavior.py  behavior_registry.py  conditions.py  context.py  evaluator.py  tree_executor.py  trees.py
server/cognition/memory/: __init__.py  long_term_memory.py  memory_system.py  memory_types.py  short_term_memory.py  spatial_types.py  working_memory.py
server/cognition/memory/consolidation/: __init__.py  config.py  consolidator.py  event_summarizer.py  experience_reflector.py  relationship_builder.py
server/cognition/needs/: __init__.py  need.py  needs_system.py  personality.py
server/communication/: __init__.py  action_dispatcher.py  websocket_server.py
server/expression/: __init__.py  registry.py  selector.py  types.py
server/llm/: __init__.py  cache.py  config.py  rate_limiter.py  types.py
server/llm/prompts/: __init__.py  consolidation_prompts.py  reasoning_prompts.py  vision_prompts.py
server/llm/providers/: __init__.py  base.py  mock.py  nanogpt.py  ollama.py
server/llm/services/: __init__.py  behavior_reasoner.py  context_builder.py  llm_service.py  speech_service.py  vision_analyzer.py  voice_command_service.py
server/perception/: __init__.py  sensor_processor.py
server/perception/vision/: __init__.py  face_detector.py  face_encoder.py  face_recognizer.py  person_tracker.py  types.py
server/src/murph_server/: __init__.py  __main__.py  config.py  main.py
server/src/murph_server/audio/: stt.py  tts.py
server/src/murph_server/intent/: __init__.py  parser.py
server/src/murph_server/llm/: ollama.py
server/static/dashboard/: dashboard.css  dashboard.js  index.html
server/storage/: __init__.py  database.py  models.py
server/video/: __init__.py  frame_buffer.py  receiver.py  vision_processor.py
shared/: constants.py
shared/messages/: __init__.py  robot_messages.proto  types.py
tests/client/: conftest.py  test_audio_capture.py  test_config.py  test_main.py  test_motor_driver.py  test_playback.py  test_ultrasonic.py  test_wakeword.py
tests/integration/: __init__.py  manual_test_scenarios.md  test_emulator_components.py
tests/server/: test_config.py  test_intent_parser.py  test_main.py  test_ollama.py  test_stt.py  test_tts.py
tests/test_emulator/: __init__.py  test_audio_track.py  test_config.py  test_microphone.py  test_physics.py  test_virtual_pi.py  test_virtual_pi_full.py  test_webcam.py
tests/test_pi/: test_actuators.py  test_camera.py  test_microphone.py  test_reflexes.py  test_sensors.py
tests/test_server/: test_additional_behaviors.py  test_audio_receiver.py  test_behavior_evaluator.py  test_behavior_executor.py  test_expression.py  test_face_detector.py  test_face_encoder.py  test_memory.py  (+12 more)
(+16 files in other folders)
