[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murph-client"
version = "0.1.0"
description = "Murph robot client - runs on Raspberry Pi for hardware control"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "openwakeword>=0.6.0",
    "RPi.GPIO>=0.7.1",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/murph_client"]
