[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murph-server"
version = "0.1.0"
description = "Murph robot server - handles STT, TTS, LLM, and intent parsing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "ollama>=0.3.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/murph_server"]
