[project]
name = "murph-server"
version = "0.1.0"
description = "Murph robot server - handles STT, LLM, and TTS processing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9.0",
    "piper-tts>=1.2.0",
    "ollama>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murph_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
